2011-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keyfile.c:
   Rename use_safe_file_saving various pref to use_atomic_file_saving 
   as it's not 'safe'. Use old pref if new one is missing for 
   compatibility with Geany <= 0.20.


2011-09-17  Frank Lanitz  <frlan@frank.uvena.de>

 * po/fa.po, THANKS, src/about.c:
   Adding Persian translation. Thanks to Moein Owhadi Kareshk
 * THANKS: Adding Giuliano Manzitti to THANKS-file.


2011-09-16  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/ui_utils.c:
   Fix document sensitivity of a few menu items.


2011-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Change various prefs label to /warn/ the user to read the manual.


2011-09-15  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/utils.c:
   Ask the user to configure a valid browser command if spawning it
   fails rather than falling back to some arbitrary hardcoded defaults.


2011-09-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/win32.c:
   Fix uninitialized font size & other fields.
   Remove unhooked font dialog apply button.


2011-09-13  Colomban Wendling  <colomban(at)geany(dot)org>

 * data/filetype_extensions.conf:
   Add Markdown extensions from Shared MIME-Info database (closes
   #3405321).
 * src/filetypes.c:
   Add missing MIME type to a few filetypes.
 * doc/geany.txt, doc/geany.html:
   Fix a few typos.


2011-09-12  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/symbols.c:
   Fix updating symbol list for overloaded C++ symbols (closes
   #3406644).


2011-09-02  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/ui_utils.c:
   Fix check for enabling MIME type based icons.
 * src/encodings.c, src/filetypes.c:
   Plug a few memory leaks.


2011-08-25  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/utils.h:
   Fix foreach_ptr_array() not to crash on arrays with 0 elements.

