@@ -1,3 +1,10 @@
+2011-09-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/build.c:
+   Use #ifdef SYNC_SPAWN instead of G_OS_WIN32 for easier testing with 
+   glib's asynchronous spawning (currently doesn't work on Windows).
+
+
 2011-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/keyfile.c:
